# kitchen-rbx1-ros

./: README.md  pi-network-configuraton.md  ros-melodic-notes.md
file_server/launch/: publish_description_rbx1.launch
rbx1_control/: CMakeLists.txt  package.xml
rbx1_control/launch/: simulator.launch
rbx1_slush/: CMakeLists.txt  package.xml  setup.py
rbx1_slush/launch/: camera.launch  slush.launch  start.sh
rbx1_slush/scripts/: gripper_command_subscriber.py  joint_command_subscriber.py  joint_states_publisher.py  robot_server.py
rbx1_slush/src/rbx1/: __init__.py  axis.py  gripper.py  mock_robot.py  robot.py
rbx1_slush/srv/: RobotGripper.srv  RobotJoints.srv  RobotStatus.srv
rbx1_urdf/: CMakeLists.txt  README.md  package.xml
rbx1_urdf/launch/: display.launch  gazebo.launch
rbx1_urdf/urdf/: rbx1.urdf
